# freestuffapp

./: .gitignore  README.md  privacy_policy.md  terms_of_use.md
FreeStuff/: AboutViewController.swift  AnonymousUser.swift  AppDelegate.swift  AreaCaching.swift  Artwork.swift  ArtworkViews.swift  BlockedUsersViewController.swift  FilterViewController.swift  Geoutils.swift  ImagePickerHelper.swift  Info.plist  NewFreeStuff.swift  OnboardingGate.swift  PinViewController.swift  SearchFooter.swift  SettingsViewController.swift  TermsGateViewController.swift  TermsText.swift  TextModeration.swift  VersionManager.swift  ViewController.swift  ZoomViewController.swift
FreeStuff.xcodeproj/: project.pbxproj
FreeStuff.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FreeStuff.xcodeproj/xcshareddata/xcschemes/: FreeStuff.xcscheme
FreeStuff/Assets.xcassets/: .$freestuff.drawio.bkp  .$freestuff.drawio.dtmp
FreeStuff/Base.lproj/: Main.storyboard
FreeStuffTests/: PennyMeTests.swift
FreeStuffUITests/: PennyMeUITests.swift
backend/: .gitattributes  app.py  data_preprocessing.py  delete_expired_posts.py  extract_location.py  init_database.py  ip_comment_dict.json  pyproject.toml  read_write_postings.py  run_client.py  telegram_crawl.py  test.py  utils.py
backend/import_data/: add_freedges.py  add_to_db.py  preprocess_freedges.py
backend/telegram_utils/: data_preprocessing.py  extract_location.py  get_street_names.py  run_client.py  to_database.py  utils.py
backend/telegram_utils/geodata/: bern_strassen.csv  brutisellen_strassen.csv  strassen.csv  zurich.gpkg
telegram_backend/: data_preprocessing.py  utils.py
(+5 files in other folders)
